# designo

./: .gitignore  .gitpod.yml  Makefile  backup-okteto-pipeline.yaml  config-template.yaml  my-secret.yaml  okteto-pipeline-prod copy.yaml  okteto-pipeline-prod.yaml  okteto-pipeline-staging.yaml  okteto-pipeline.yaml  okteto.yml
.github/workflows/: api-auth.yaml  api-frontendmentor.yaml  api-images.yaml  api-ingress-prod.yaml  api-product-feedbacks.yaml  audiophile.yaml  auth.yaml  client-audiophile.yaml  client-auth.yaml  client-frontendmentor.yaml  client-invoice-app.yaml  client-product-feedbacks.yaml  client-productfeedbacks.yaml  deploy.yaml  designo.yaml  gh-page.yaml  invoice-app.yaml  okteto.yaml  portfolio.yaml  prod.yaml  product-feedbacks.yaml  staging.yaml
.okteto/: api-auth.yaml  api-frontendmentor.yaml  api-images.yaml  api-ingress-prod.yaml  api-invoice-app.yaml  api-product-feedbacks.yaml  audiphile.yaml  auth.yaml  client-frontendmentor.yaml  client-invoice-app.yaml  client-product-feedbacks.yaml  designo.yaml  invoice-app.yaml  product-feedbacks.yaml
api/: Cargo.toml  Makefile  docker-compose.yml  images.Dockerfile  invoice-app.Dockerfile  sample.env
api/auth/: Cargo.toml
api/frontendmentor/: Cargo.toml
api/images/: Cargo.toml
api/invoice-app/: Cargo.toml
api/prelude/: Cargo.toml
api/prelude/src/: config.rs  lib.rs
api/prelude/src/errors/: auth_error.rs  ddos_error.rs  feedback_error.rs  github_error.rs  invoice_error.rs  mod.rs  upload_error.rs
api/prelude/src/guards/: ddos_guard.rs  mod.rs
api/prelude/src/models/: user_token.rs
api/prelude/src/services/: db_service.rs  ddos_service.rs  email_service.rs  hasher_service.rs  jwt_service.rs  mod.rs  redis_service.rs
api/prelude/src/utils/: date_format.rs
api/product-feedbacks/: Cargo.toml
api/upload/: Cargo.toml
api/upload/src/: main.rs
api/upload/src/errors/: mod.rs  upload_error.rs
api/upload/src/handlers/: mod.rs  public_files.rs  upload.rs
api/upload/src/repo/: mod.rs  upload.rs
api/upload/src/utils/: mod.rs  screenshot_utils.rs  tmp_file.rs  upload.rs
charts/api/: Chart.yaml  values.yaml
charts/api-storage/: Chart.yaml
client/: .dockerignore  .eslintrc.json  angular.json  audiophile.Dockerfile  auth.Dockerfile  designo.Dockerfile  frontendmentor.Dockerfile  invoice-app.Dockerfile  nginx.conf  nx.json  package.json  pnpm-lock.yaml  product-feedbacks-stage.Dockerfile  product-feedbacks-staging.Dockerfile  product-feedbacks.Dockerfile  proxy.conf.json  tsconfig.base.json  tsconfig.json
go-api/: .dockerignore  Dockerfile  Makefile  app.env  auth.Dockerfile  frontendmentor.Dockerfile  go.work  go.work.sum
go-api/auth/: go.mod  (+2 more)
ingress/: api-ingress.yaml  api-prod.yaml  api-staging.yaml
okteto/: api-auth.yaml  api-images.yaml  api-product-feedbacks.yaml  client-audiophile.yaml  client-auth.yaml  client-invoice-app.yaml  client-product-feedbacks.yaml  config-map.yaml  okteto-pipeline-api-auth.yaml
rust-api/: Cargo.toml  Makefile  auth.Dockerfile  frontendmentor.Dockerfile  product-feedbacks.Dockerfile
rust-api/frontendmentor/: Cargo.toml
rust-api/frontendmentor/src/: main.rs
rust-api/frontendmentor/src/dto/: challenge_dto.rs  gallery_dto.rs  mod.rs
rust-api/frontendmentor/src/handlers/: challenges_handler.rs
rust-api/frontendmentor/src/models/: challenge_model.rs  files.rs  gallery_model.rs  mod.rs  solution_model.rs  tag_model.rs
rust-api/frontendmentor/src/repos/: challenges_repo.rs  gallery_repo.rs  languages_repo.rs  mod.rs
rust-api/frontendmentor/src/services/: challenges_service.rs  mod.rs
rust-api/product-feedbacks/: Cargo.toml
rust-api/product-feedbacks/src/dto/: comment_dto.rs  feedback_dto.rs
rust-api/product-feedbacks/src/errors/: comment_error.rs  feedback_error.rs
rust-api/product-feedbacks/src/handlers/: comment_handler.rs  feedback_handler.rs  mod.rs
rust-api/product-feedbacks/src/models/: category_model.rs  mod.rs
rust-api/product-feedbacks/src/repos/: category_repo.rs  comment_repo.rs  mod.rs
rust-api/product-feedbacks/src/services/: comment_service.rs  feedback_service.rs  mod.rs
values/: api-auth.yaml  api-images.yaml  api-product-feedbacks.yaml  client-auth.yaml  client-product-feedbacks.yaml  yugabytedb-dev.yaml
(+2504 files in other folders)
