[package]
name = "prelude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix = "0.12"
actix-redis = "0.10"
actix-web = "4.0.1"
actix-multipart = "0.4"

jsonwebtoken = "8.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# Mailer 
lettre = { version = "0.10.0-rc.5", features = [
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
    "builder",
] }

# Actix
derive_more = "0.99.2"
dotenv = "0.15.0"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3.9"
# env_logger="0.9.0"
# log= "0.4.16"

# Tokio postgres
deadpool-postgres = { version = "0.10.1", features = ["serde"] }
deadpool = "*"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.5", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
] }
postgres-types = { version = "0.2.2", features = ["derive"] }
tokio-stream = "0.1.8"
handlebars = "4.2.2"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }
redis-async = { version = "0.8", default_features = false, features = [
    "tokio10",
] }
