[package]
name = "upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../prelude" }

headless_chrome = "0.9.0"
actix-web = "4.0.1"
actix-multipart = "0.4"
actix-files = "0.6.0"
actix-cors = "0.6"
actix-service = "2.0.2"
actix-rt = "2.7.0"
derive_more = "0.99.2"

# Futures 
futures = { version = "0.3", features = ["compat"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.3.9"
tokio-stream = "0.1.8"
sanitize-filename = "0.3.0"
uuid = { version = "0.8", features = ["v4"] }
image = "0.24.1"

deadpool-postgres = { version = "0.10.1", features = ["serde"] }
