[package]
name = "frontendmentor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../prelude" }

strum = { version = "0.24", features = ["derive"] }
actix-web = "4.0.1"
actix-multipart = "0.4"
actix-cors = "0.6"
actix-service = "2.0.2"
actix-rt = "2.7.0"
actix-web-validator = "3.0.0"
actix-redis = "0.10"
redis-async = { version = "0.8", default_features = false, features = [
    "tokio10",
] }

validator = { version = "0.14.0", features = ["derive"] }
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
dotenv = "0.15.0"
# futures = "0.3.1"
futures = { version = "0.3", features = ["compat"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = "8.0.1"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3.9"
# env_logger="0.9.0"
# log= "0.4.16"

# tokio + rustls
sqlx = { version = "0.5", features = ["runtime-tokio-rustls"] }
